# hkte-robohealth

./: .gitignore  HONESTY.md  README.md
app/: .cta.json  .dockerignore  AGENTS.md  Dockerfile  components.json  package-lock.json  package.json  vite.config.ts
app/public/: manifest.json
app/src/: styles.css
app/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  calendar.tsx  card.tsx  chart.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  item.tsx  kbd.tsx  menubar.tsx  native-select.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  (+11 more)
app/src/routes/: __root.tsx  index.tsx
dashboard/: readme.md
dashboard/backend/: package-lock.json  package.json
dashboard/backend/src/: data.js  index.js
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/frontend/src/: App.jsx  api.js  index.css
health/: pyproject.toml  urine_analysis.py  vision_analysis.py
health/data/: vision_results.json
supabase/migrations/: 20260203140322_create_profiles_table.sql  20260606142317_foundation_security.sql  20260606151244_hong_kong_residential_graph.sql  20260606164809_robot_fleet_and_devices.sql  20260606180533_clinical_capability_catalog.sql  20260606193758_encounters_measurements_and_media.sql  20260606211621_care_workflows_and_integrations.sql  20260606232746_dashboard_analytics.sql
(+9 files in other folders)
